--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t mariofiore/react-test -f ./client/Dockefile.dev ./client
+  - docker build -t mariofiore/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run mariofiore/react-test npm test -- --coverage
