--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,20 @@ services:
   - docker
 
 before_install:
-  - docker build -t mariofiore/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t sozonivka2018/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run mariofiore/react-test npm test -- --coverage
+  - docker run sozonivka2018/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t mariofiore/multi-client ./client
-  - docker build -t mariofiore/multi-nginx ./nginx
-  - docker build -t mariofiore/multi-server ./server
-  - docker build -t mariofiore/multi-worker ./worker
+  - docker build -t sozonivka2018/multi-client ./client
+  - docker build -t sozonivka2018/multi-nginx ./nginx
+  - docker build -t sozonivka2018/multi-server ./server
+  - docker build -t sozonivka2018/multi-worker ./worker
   # Log in to the CLI
-  - echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_ID\" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push mariofiore/multi-client
-  - docker push mariofiore/multi-nginx
-  - docker push mariofiore/multi-server
-  - docker push mariofiore/multi-worker
+  - docker push sozonivka2018/multi-client
+  - docker push sozonivka2018/multi-nginx
+  - docker push sozonivka2018/multi-server
+  - docker push sozonivka2018/multi-worker
