--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push sozonivka2018/multi-nginx
   - docker push sozonivka2018/multi-server
   - docker push sozonivka2018/multi-worker
+
+  deploy:
+    provider: elasticbeanstalk
+    region: "eu-central-1"
+    app: "multi-docker"
+    env: "MultiDocker-env"
+    bucket_name: "elasticbeanstalk-eu-central-1-303888037788"
+    bucket_path: "docker-multi"
+    on:
+      branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+      secure: "$AWS_SECRET_KEY"
